[package]
name = "reg-interface"
version = "0.5.0"
edition = "2024"
authors = ["Syfaro <syfaro@huefox.com>"]
publish = false

[package.metadata.release]
allow-branch = ["main"]
sign-tag = true

[features]
vendored = ["nfc1/vendored", "nfc1/drivers", "nfc1/default_drivers", "dbus/vendored"]

[dependencies]
aamva = { git = "https://github.com/Syfaro/aamva-rs.git", version = "0.1.0" }
async-hid = "0.2.0"
async-trait = "0.1.81"
axum = { version = "0.8.1", default-features = false, features = ["http1", "tracing", "tokio"] }
base64 = "0.22.1"
eyre = "0.6.12"
flate2 = "1.1.0"
futures = "0.3.30"
hex = "0.4.3"
image = { version = "0.25.5", default-features = false }
infer = "0.19.0"
ipp = { version = "5.2.0", default-features = false, features = ["async", "async-client", "serde"] }
isomdl = { git = "https://github.com/Syfaro/isomdl.git", branch = "handover-improvements", version = "0.1.0" }
jpeg2k = { version = "0.9.1", features = ["image"] }
jsonwebtoken = "9.3.0"
mrtd = { version = "0.5.2", features = ["serde"] }
nfc1 = { version = "0.5.2", default-features = false }
open = "5.3.0"
postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }
rhai = { version = "1.21.0", features = ["serde", "sync"] }
rumqttc = { version = "0.24.0", features = ["url", "websocket"] }
serde = { version = "1.0.218", features = ["derive", "rc"] }
serde_json = "1.0.139"
serde_with = "3.12.0"
sha2 = "0.10.8"
tap = "1.0.1"
time = { version = "0.3.36", features = ["macros", "parsing", "serde"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-serial = "5.4.4"
tokio-stream = "0.1.17"
tokio-util = "0.7.11"
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
uuid = "1.15.1"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9.7", optional = true }
